# drone-capstone

./: .gitignore  .gitmodules  README.md
.github/workflows/: docker_build.yml
Docker/: README.md  compose.yml
Docker/base/: Dockerfile  compose.yml  requirements.txt
Docker/foxy/: compose.yml
Docker/humble/: Dockerfile  README.md  compose.yml
Docker/jetson/: Dockerfile  README.md  compose.yml
PX4-Autopilot/src/lib/tensorflow_lite_micro/tflite_micro/tensorflow/lite/micro/tools/make/: ethos_u_core_platform.patch  flatbuffers.patch  pigweed.patch
PX4-Autopilot/src/lib/tensorflow_lite_micro/tflite_micro/tensorflow/lite/micro/tools/make/ext_libs/: ndsplib-hifi4.patch  ndsplib-hifi5.patch  stm32_bare_lib.patch  xa_nnlib_hifi4.patch
ros2_ws/src/apriltag_pose_from_detections/: package.xml  setup.cfg  setup.py
ros2_ws/src/apriltag_pose_from_detections/apriltag_pose_from_detections/: tag_pose_node.py
ros2_ws/src/apriltag_ros/cfg/: tags_36h11.yaml
ros2_ws/src/apriltag_visualizer/: CMakeLists.txt  package.xml
ros2_ws/src/apriltag_visualizer/src/: apriltag_visualizer.cpp
ros2_ws/src/bringup/: package.xml  setup.py
ros2_ws/src/bringup/launch/: bringup.launch.py  sim.launch.py
ros2_ws/src/gz_image_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/gz_image_bridge/src/: gz_image_bridge.cpp
ros2_ws/src/precision_land_apriltag/: CMakeLists.txt  package.xml
ros2_ws/src/precision_land_apriltag/src/: apriltag_detect_test.cpp  precision_land_apriltag.cpp
ros2_ws/src/px4_ros_com/: CMakeLists.txt  package.xml
ros2_ws/src/px4_ros_com/src/examples/offboard/: offboard_control.cpp
ros2_ws/src/vision_to_mavros/: .gitignore  CMakeLists.txt  README.md
ros2_ws/src/vision_to_mavros/include/vision_to_mavros/: vision_to_mavros.hpp
ros2_ws/src/vision_to_mavros/launch/: t265_all_nodes_launch.py  t265_tf_to_mavros_launch.py
ros2_ws/src/vision_to_mavros/src/: vision_to_mavros.cpp
